# brilliant-mqtt

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml
.claude/skills/: README.md
.github/workflows/: ci.yml  quality-scale.yml  release.yml  validate.yml
.superpowers/sdd/: task-9-report.md
custom_components/brilliant_mqtt/: __init__.py  async_cleanup.py  binary_sensor.py  ble_protocol.py  ble_scanner.py  button.py  component_payloads.py  components.py  config_flow.py  const.py  diagnostics.py  entity.py  ha_control.py  ha_control_manifest.py  ha_control_protocol.py  manager.py  manifest.json  panel_ops.py  quality_scale.yaml  scene_control.py  select.py  services.yaml  shell.py  strings.json  switch.py  update.py  voice_payload.py
custom_components/brilliant_mqtt/translations/: en.json
deploy/: README.md  brilliant-bus-watchdog.service  brilliant-ha-mirror.service  brilliant-mqtt.service  brilliant-vc-pilot-app-manifest.sha256  brilliant-vc-pilot.service  brilliant-vc-session-app-manifest.sha256  brilliant-vc-session.service  brilliant-voice.service  brilliant-wifi-watchdog.service
deploy/voice/: LVA_REF  README.md  aec_daemon.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  ha-integration.md  ha-mirror.md  voice.md
docs/brands/: README.md  SUBMISSION.md
docs/brilliant-panel/: README.md  acquisition.md  analysis-design.md  cloud-boundaries.md  coordinated-session-approval.example.json  coordinated-session-design.md  diyhue-bridge.md  home-assistant-integration.md  home-assistant-support-matrix.md  native-ha-slider-validation-status.md  peripheral-surfaces.md  peripheral-type-catalog.md  slider-bridge-feasibility.md  software-architecture.md  ui-information-architecture.md  validation-runbook.md  var-persistence.md  virtual-control-gate-schema.json  virtual-control-launcher-snapshot-v3.example.json  virtual-control-launcher-snapshot-v4.example.json  virtual-control-launcher-snapshot-v5.example.json  virtual-control-runtime-contract.md  virtual-control-start-approval.example.json  virtual-control-toolkit.md
docs/install/: mqtt-broker.md  root-ssh.md
docs/reference/: deployment.md  message-bus-api.md  poc-findings.md
ha/: pyproject.toml
ha/custom_components/brilliant_mqtt/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  manager.py  manifest.json  panel_ops.py  quality_scale.yaml  services.yaml  shell.py  strings.json  update.py
ha/custom_components/brilliant_mqtt/translations/: en.json
ha/tests/: conftest.py  fakes.py  test_ble_protocol.py  test_ble_scanner.py  test_brand.py  test_components.py  test_config_flow.py  test_const.py  test_diagnostics.py  test_entities.py  test_ha_control.py  test_ha_control_manifest.py  test_ha_control_protocol.py  test_hue_ca_component.py  test_init.py  test_manager.py  test_panel_ops.py  test_repairs.py  test_scene_control.py  test_services.py  test_shell.py  test_switch.py  test_update.py  test_voice_payload.py
protocol_lab/: pyproject.toml
protocol_lab/src/brilliant_protocol_lab/: __init__.py  capture.py  manifest.py  mdns.py  oracle.py  profile.py  redaction.py  thrift_wire.py
protocol_lab/tests/: test_capture.py  test_manifest.py  test_mdns.py  test_oracle.py  test_package.py  test_profile.py  test_redaction.py  test_thrift_wire.py
protocol_lab/tools/: browse_brilliant.py  classify_capture.py  classify_commitment.py  compile_profile.py  invoke_commitment.py  record_loopback.py  reference_probe.py
scripts/: build_payload.sh  build_voice_payload.sh  locked_wheel.py  verify_sha256.py
scripts/brilliant-panel/: acquire.sh
src/brilliant_ble_observer/: __init__.py  __main__.py  bluez.py  config.py  model.py  run.py
src/brilliant_bus_watchdog/: __init__.py  health.py  reboot.py  reboot_guard.py  run.py
src/brilliant_ha_mirror/: __init__.py  __main__.py  config.py  ha_client.py  hosting.py  leader.py  mapping.py  mirror.py  protocols.py
src/brilliant_hue_ca/: config.py  fs.py  run.py
src/brilliant_mqtt/: __init__.py  __main__.py  bridge.py  bus.py  cleanup_legacy_mirror.py  commands.py  config.py  desired_state.py  discovery.py  heartbeat.py  mapping.py  mesh_leader.py  model.py  motion_derive.py  mqttio.py  protocols.py  scene_bridge.py  scene_state.py  thrift_binary.py
src/brilliant_voice/: __init__.py  __main__.py  config.py  firewall.py  hosts.py  supervisor.py
src/brilliant_wifi_watchdog/: __init__.py  ladder.py  probe.py  recovery.py
tests/: fakes.py  test_ble_observer_bluez.py  test_ble_observer_config.py  test_ble_observer_model.py  test_ble_observer_mqtt.py  test_ble_observer_run.py  test_ble_observer_service.py  test_bridge.py  test_bridge_derive.py  test_bridge_heartbeat.py  test_bridge_reconcile.py  test_bus_adapter.py  test_bus_normalize.py  test_bus_wd_health.py  test_bus_wd_reboot_guard.py  test_bus_wd_run.py  test_bvd_live.py  test_bvd_single_light.py  test_cleanup_legacy_mirror.py  test_commands.py  test_config.py  test_desired_state.py  test_discovery.py  test_fakes.py  test_ha_control_protocol.py  test_ha_mirror_config.py  test_ha_mirror_fakes.py  test_ha_mirror_ha_client.py  test_ha_mirror_hosting_smoke.py  test_ha_mirror_leader.py  test_ha_mirror_main.py  test_ha_mirror_mapping.py  test_ha_mirror_orchestrator.py  test_heartbeat.py  test_hue_ca_config.py  test_hue_ca_coordinator.py  test_hue_ca_fs.py  test_hue_ca_payload.py  test_hue_ca_reconcile.py  test_hue_ca_run.py  (+40 more)
tests/fixtures/: ble_observer_v1.json  ha_control_v1_vectors.json  scene_all_off.json  scene_execution_all_off.json
tools/: __init__.py
tools/brilliant_bvd/: __init__.py  live.py  single_light_pilot.py
tools/brilliant_vc/: __init__.py  _common.py  audit.py  e2e_acceptance.py  gates.py  identity_materializer.py  launcher_preflight.py  monitor.py  provision_panel.py  runtime_handoff.py  runtime_prepare.py  session_approval.py  session_coordinator.py  session_prepare.py  single_light_pilot.py  slider_binding.py  staged_runtime.py  start_approval.py  token_check.py  vassal_manifest.py
(+54 files in other folders)
