[project]
name = "brilliant-mqtt"
version = "0.1.0"
description = "Bridge Brilliant Control panels' message bus to MQTT / Home Assistant"
readme = "README.md"
license = "MIT"
# The panel interpreter is Python 3.10.9 and is the runtime — do NOT bump.
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiomqtt>=2.3", # async MQTT (wraps paho-mqtt); vendored to /var on the panel
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.10"
strict = true

# Panel libraries are closed-source on-panel Cython with no type stubs anywhere,
# so missing-import errors are unavoidable and not a code defect.
[[tool.mypy.overrides]]
module = ["lib.*", "thrift_types.*"]
ignore_missing_imports = true

# bus.py subclasses the no-stub Cython RPCObserver (resolved as Any), which
# --strict's disallow_subclassing_any rejects. Relaxing it for this one module is
# the root-cause config for the closed-source base — not an inline suppression.
[[tool.mypy.overrides]]
module = ["brilliant_mqtt.bus"]
disallow_subclassing_any = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brilliant_mqtt"]
