[project]
name = "brilliant-mqtt"
version = "0.5.7"
description = "Bridge Brilliant Control panels' message bus to MQTT / Home Assistant"
readme = "README.md"
license = "MIT"
# The panel interpreter is Python 3.10.9 and is the runtime — do NOT bump.
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiomqtt>=2.3", # async MQTT (wraps paho-mqtt); vendored to /var on the panel
    "aiohttp>=3.14.1", # async HTTP/WebSocket client for the HA mirror (brilliant_ha_mirror)
]

[dependency-groups]
dev = [
    "cryptography==38.0.1", # matches the pinned panel firmware for PKCS#12 contract tests
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
# The HA integration now lives at the repo root (custom_components/) but is a
# SEPARATE py3.14 sub-project linted/typed by the ha/ tooling. Exclude it — and
# the ha/ test project that imports it as first-party — from the py3.10 agent
# gate so the two runtimes' isort/format never contaminate each other. The
# integration is covered by the ha/ gate. (mypy below is already scoped to
# src/tests, so this exclude only affects ruff.)
extend-exclude = ["custom_components", "ha", "deploy/voice"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.10"
strict = true

# Panel libraries are closed-source on-panel Cython with no type stubs anywhere,
# so missing-import errors are unavoidable and not a code defect.
[[tool.mypy.overrides]]
module = ["lib.*", "thrift.*", "thrift_types.*", "peripherals.*", "gflags"]
ignore_missing_imports = true

# bus.py subclasses the no-stub Cython RPCObserver, and hosting.py subclasses the
# no-stub Cython Peripheral (both resolved as Any), which --strict's
# disallow_subclassing_any rejects. Relaxing it for these modules is the
# root-cause config for the closed-source base — not an inline suppression.
[[tool.mypy.overrides]]
module = [
    "brilliant_mqtt.bus",
    "brilliant_ha_mirror.hosting",
    # single_light_pilot subclasses the same no-stub Cython Peripheral base.
    "tools.brilliant_vc.single_light_pilot",
]
disallow_subclassing_any = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/brilliant_mqtt",
    "src/brilliant_voice",
    "src/brilliant_bus_watchdog",
    "src/brilliant_ha_mirror",
    "src/brilliant_hue_ca",
]
