[project]
name = "brilliant-mqtt-ha"
version = "0.0.0"  # never published as a package; the integration version lives in manifest.json
description = "Dev/test harness for the brilliant_mqtt HA companion integration"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-homeassistant-custom-component==0.13.338", # pins HA core 2026.6.2
    "asyncssh==2.23.1",                                # mirrors manifest.json requirements
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"  # ruff has no py314 target yet; bump when ruff adds support
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true

# The pytest HA harness ships no py.typed marker.
[[tool.mypy.overrides]]
module = ["pytest_homeassistant_custom_component.*"]
ignore_missing_imports = true
