[project]
name = "brilliant-mqtt-ha"
version = "0.0.0"  # never published as a package; the integration version lives in manifest.json
description = "Dev/test harness for the brilliant_mqtt HA companion integration"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-homeassistant-custom-component==0.13.338", # pins HA core 2026.6.2
    "asyncssh==2.23.1",                                # mirrors manifest.json requirements
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# The integration now lives at the repo root (custom_components/), one level up
# from this test project. Put the repo root on sys.path so `import
# custom_components` resolves while `tests` still maps to ha/tests. ".." is the
# repo root whether pytest runs from the root (-c ha/pyproject.toml → rootdir=ha)
# or from inside ha/ (rootdir=ha) — both make ".." the repo root.
pythonpath = [".."]
markers = ["allow_lingering_timers: tolerate the core mqtt integration's recurring timer"]

[tool.ruff]
target-version = "py313"  # ruff has no py314 target yet; bump when ruff adds support
line-length = 100
# agent_payload/ is a gitignored build artifact (vendored py3.10 third-party
# wheels). ruff honours .gitignore for bare invocations, but an explicit-path
# run (`ruff check custom_components`) descends into it — exclude it so the lint
# result is identical however ruff is invoked, matching the mypy exclude below.
extend-exclude = ["agent_payload"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true
# Run from the repo root (custom_components/ is a top-level package there). Put
# `ha` on the search path FIRST so `tests` resolves to ha/tests — not the
# agent's repo-root ./tests, which is a different py3.10 package mypy must never
# pull into this py3.14 check. (custom_components resolves from the cwd root.)
mypy_path = ["ha"]
# agent_payload/ is a gitignored build artifact (scripts/build_payload.sh): the
# py3.10 agent package + vendored third-party MQTT wheels. It is not integration
# source — exclude it from this (py3.14) type-check; the agent gate at the repo
# root type-checks the agent itself. (mypy, unlike ruff, ignores .gitignore.)
exclude = ["/agent_payload/"]

# The pytest HA harness ships no py.typed marker.
[[tool.mypy.overrides]]
module = ["pytest_homeassistant_custom_component.*"]
ignore_missing_imports = true
