[project]
name = "brilliant-protocol-lab"
version = "0.1.0"
description = "Clean-room structural characterization tools for Brilliant LAN protocols"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
  "ifaddr>=0.2,<1",
  "thrift>=0.22,<1",
  "zeroconf>=0.147,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1,<2",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brilliant_protocol_lab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
